# perry-build

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  GAPS.md  README.md  run_tests.sh
.cargo/: config.toml
.github/workflows/: build-windows-linux-runner  release-packages.yml  rust.yml  test.yml
benchmarks/: bench_fibonacci_phase2.ts
benchmarks/polyglot/: METHODOLOGY.md  RESULTS.md  bench_opt.cpp  bench_opt.go  bench_opt.rs  bench_opt.swift  run_all.sh
crates/perry/: Cargo.toml
crates/perry-codegen-js/: Cargo.toml
crates/perry-codegen-js/src/: emit.rs  lib.rs  web_runtime.js
crates/perry-codegen-llvm/src/: boxed_vars.rs  codegen.rs  collectors.rs  expr.rs  lib.rs  linker.rs  lower_call.rs  lower_string_method.rs  runtime_decls.rs  stmt.rs  type_analysis.rs
crates/perry-codegen-wasm/src/: emit.rs  lib.rs  wasm_runtime.js
crates/perry-codegen/src/: block.rs  classes.rs  closures.rs  codegen.rs  collectors.rs  expr.rs  function.rs  functions.rs  lib.rs  linker.rs  lower_call.rs  module.rs  module_init.rs  runtime_decls.rs  stmt.rs  (+3 more)
crates/perry-runtime/: Cargo.toml
crates/perry-runtime/src/: arena.rs  array.rs  bigint.rs  box.rs  buffer.rs  builtins.rs  date.rs  event_pump.rs  exception.rs  gc.rs  i18n.rs  ios_game_loop.rs  json.rs  lib.rs  map.rs  math.rs  object.rs  os.rs  path.rs  process.rs  promise.rs  proxy.rs  regex.rs  set.rs  stdlib_stubs.rs  string.rs  thread.rs  timer.rs  url.rs  value.rs
crates/perry-stdlib/: Cargo.toml
crates/perry-ui-android/: Cargo.toml
crates/perry-ui-tvos/: Cargo.toml
crates/perry-ui-windows/: Cargo.toml
crates/perry-ui-windows/src/: app.rs  clipboard.rs  file_dialog.rs  layout.rs  lib.rs  menu.rs  state.rs
crates/perry-ui-windows/src/widgets/: button.rs  divider.rs  hstack.rs  image.rs  mod.rs  scrollview.rs  slider.rs  spacer.rs  text.rs  textfield.rs  toggle.rs  vstack.rs
docs/src/: SUMMARY.md  introduction.md
npm/perry-linux-arm64/: package.json.tmpl
npm/perry-linux-x64/: package.json.tmpl
winget-manifests/: PerryTS.Perry.installer.yaml  PerryTS.Perry.locale.en-US.yaml
(+182 files in other folders)
