[package]
name = "perry-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Runtime library: GC, JSValue, builtins"

[lib]
crate-type = ["rlib", "staticlib"]

[features]
default = ["full"]
full = ["dep:hostname", "dep:dirs", "dep:whoami", "dep:postgres", "dep:redis"]
# When perry-stdlib is the consumer, exclude no-op stubs to avoid duplicate symbols
stdlib = []
# Enable geisterhand in-process fuzzer (callback registry + dispatch queue)
geisterhand = []
# iOS/tvOS game loop: provides main() that spawns user code on game thread + UIApplicationMain
ios-game-loop = []

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
libc = "0.2"
rand = "0.8"
regex = "1"
itoa = "1"
ryu = "1"
hostname = { version = "0.4", optional = true }
dirs = { version = "5", optional = true }
whoami = { version = "1", optional = true }
lazy_static = "1.4"

# Database clients
postgres = { version = "0.19", features = ["with-serde_json-1"], optional = true }
redis = { version = "0.25", optional = true }
# mongodb = { version = "2", default-features = false, features = ["sync"] }
serde_json = "1"

# We'll add GC bindings later
# For now, use a simple bump allocator or leak memory for MVP
